welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-5: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:2: error: not found: value vuBiscuit
vuBiscuit(); 
^